      dialog instead of waiting for the next turn as it happened in the 
      previous version. If, for example, the user sets the search tree depth
      to a big value and computing is taking too long, the config dialog
      can be opened again, settings changed and changes applied instantly
    - Improved progress bar handling
    - Accelerators for New and Quit options in the Game menu

13/05/2010: Version 0.2.0
    - Nucleation points are drawn on the board (if user selects the suitable
      option in the menu) using player's colour. Shared nucleation points 
      are black.
    - Current player's forbidden areas can also be shown selecting the 
      "show forbidden area" option in the menu
    - App can be set up to play human vs human, human vs computer and 
      computer vs computer games
    - Computer and human players can be selected to play as player1 or
      player2 in any kind of game
    - Settings of a game can be edited at all times through the preferences
      menu (in settings) except for starting coordinates, which can be edited
      either when a new game is launched or if no pieces have been put down on 
      the board
    - Type of heuristic (evaluation function) for computer players can 
      be edited through both the preferences dialog and when a new game is
      launched. 3 types of heuristic have been included in this release: 
      "NK weighted", "simple" and "random"
    - Piece edition improved for those pieces with only one possible
      configuration
    - Application is able to cancel a computing operation for a new game
      to start. In previous versions cancelling the current computing operation
      was only enabled when the human user wanted to close the application (new
      games had to wait until the worker thread had finished its calculations)
    - libglade dependency removed. Gtkbuilder is used instead
    - Executable in windows has reduced its size around 50%. Released zipped