@@ -10,6 +10,7 @@
       can be opened again, settings changed and changes applied instantly
     - Improved progress bar handling
     - Accelerators for New and Quit options in the Game menu
+    - Icons are loaded correctly in window platform
 
 13/05/2010: Version 0.2.0
     - Nucleation points are drawn on the board (if user selects the suitable
